2006-10-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* docs/Makefile.am: Remove rfc2229.txt from EXTRA_DIST. (Debian
	bug DB#393372)

2006-08-25  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-window.c:
	(sidebar_page_changed_cb): Update the sidebar contents when
	changing pages.

2006-08-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/Makefile.am: Let the scalable icon be installed
	in the right place inside the hicolor icon theme. (#352412,
	reported and fixed by Rui Matos)

2006-08-20  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-common.h:
	* src/gdict-common.c:
	(gdict_gconf_get_string_with_default): Add function for
	retrieving a string from GConf with a default fallback.

	* src/gdict-applet.c:
	* src/gdict-pref-dialog.c:
	* src/gdict-window.c: Fix memory leaks. (#352128, patch
	by Paolo Borelli)

2006-08-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/gdict-speller.c:
	* libgdict/gdict-database-chooser.c: Add API documentation
	definitions for gtk-doc.

	* src/gdict-applet.c: Change the default columns and rows
	number of the applet.

	(window_show_cb), (gdict_applet_build_window),
	(gdict_applet_lookup_end_cb), (gdict_applet_error_cb),
	(gdict_applet_style_set): Move the resize call to a
	callback to the show signal; this should make the
	window manager happier when it tries to place the
	definition window on the desktop.

	* src/gdict-sidebar.c:
	(sidebar_page_id_quark), (gdict_sidebar_add_page),
	(gdict_sidebar_remove_page): Implement the page removal
	function of GdictSidebar.

2006-07-29  Christophe Merlet  <redfox@redfoxcenter.org>

	* src/gdict-window.c: Fixed typo.

2006-07-28  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-app.c (gdict_init): Use G_OPTION_REMAINING
	to catch every word used on the command line and look up
	them (#335886).

	(gdict_create_window): Create a window for every request
	for match

	* src/gdict-app.c:
	* src/gdict-window.h:
	* src/gdict-window.c: Add an "action" property for the