@@ -1,3 +1,14 @@
+2006-10-17  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* src/gdict-about.c:
+	* src/gdict-applet.c:
+	* src/gdict-pref-dialog.c:
+	* src/gdict-pref-dialog.h:
+	* src/gdict-window.c: Add multihead support for the about
+	and preferences dialogs. (#361856, patch by Glynn Foster)
+
+	* src/gdict-window.c: Fix a couple of casting warnings.
+
 2006-10-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* docs/Makefile.am: Remove rfc2229.txt from EXTRA_DIST. (Debian
